trying to recover my privacy on the net
sorry for the change but i'm deleting my name associated to emails

--- a/wp-content/plugins/theme-my-login/language/theme-my-login-es_ES.po
+++ b/wp-content/plugins/theme-my-login/language/theme-my-login-es_ES.po
@@ -7,7 +7,7 @@ msgstr ""
 "POT-Creation-Date: 2012-03-08 16:19:05+00:00\n"
 "PO-Revision-Date: 2012-05-28 16:50-0500\n"
 "Last-Translator: Jeff Farthing <jeff@jfarthing.com>\n"
-"Language-Team: Ivan de la Jara <unsleep.com@gmail.com>\n"
+"Language-Team: UnSleep <unsleep.com@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
